# YUVPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EGLDisplayYUV.cpp  EGLDisplayYUV.h  GlobalContexts.cpp  GlobalContexts.h  LogUtils.cpp  LogUtils.h  ShaderRGBA.cpp  ShaderRGBA.h  ShaderUtils.cpp  ShaderUtils.h  ShaderYUV.cpp  ShaderYUV.h  YUVPlayer.cpp  YUVPlayer.h  native-lib.cpp
app/src/main/java/com/soft/yuvplayer/: BaseActivity.java  FunctionControl.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
